src/objects/contact_last_accessed_step__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>contacts last accessed step</relationshipLabel>
        <relationshipName>contacts_last_accessed_step</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JoinId__c</fullName>
        <description>Id of join process</description>
        <label>JoinId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Join_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Join Process</label>
        <referenceTo>joinapi__Join_Process__c</referenceTo>
        <relationshipLabel>contacts last accessed step</relationshipLabel>
        <relationshipName>contacts_last_accessed_step</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step_Order__c</fullName>
        <label>Step Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>contact last accessed step</label>
    <nameField>
        <displayFormat>SN-{0000}</displayFormat>
        <label>RN</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>contacts last accessed step</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>